--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .DS_Store
+cache/
+data/ne_10m_admin_0_countries/
+data/ne_10m_admin_0_countries_fra/
+image.png
+paris_detailed_map_with_points.html
+pepe.ipynb
